--- a/app/templates/less/examples/index/index.css
+++ b/app/templates/less/examples/index/index.css
@@ -2,5 +2,5 @@
  * @author     <%=authorName%>
  * @email       <%=authorEmail%>
  * @date        <%=date%>
- * @description 
+ * @description  <%=description%>
  */
